build(main): an other build method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,11 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib) # 设置静态库
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib) # 动态库文件目录
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin) # 可执行文件目录
 
-add_subdirectory(./src)
-aux_source_directory(. SRC_ROOT)
+#add_subdirectory(./src)
+aux_source_directory(./src/ SRC_ROOT)
 
 if (HHTL_TEST)
     add_executable(hhtl ${SRC_ROOT})
 else ()
     add_library(hhtl ${SRC_ROOT})
 endif ()
-
-target_link_libraries(hhtl htsrc)
