--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if (CW_KATA_ARM)
     set(TOOL_C_PATH     "/home/hotakus/dl/gcc-arm-10.3-2021.07-x86_64-arm-none-eabi/bin/arm-none-eabi-gcc")
     SET(CMAKE_C_COMPILER ${TOOL_C_PATH})
     set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -O3")
-    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -march=${ARM_ARCH} -mfloat-abi=${ARM_FLOAT_ABI} ${ARM_FPU}")
+    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -march=${ARM_ARCH} -mfloat-abi=${ARM_FLOAT_ABI} -mfpu=${ARM_FPU}")
     set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} --specs=nosys.specs -mno-unaligned-access -fno-aggressive-loop-optimizations")
 else ()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
